--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,4 +4,4 @@ html(lang="ko")
         title Wetube
     body
         h1 Welcome to Wetube
-        footer &copy; 2021 Wetube
+        footer &copy; #{new.Date().getFullYear()} Wetube
