--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,7 +1,4 @@
-doctype html 
-html(lang="ko")
-    head 
-        title Wetube
-    body
-        h1 Welcome to Wetube
-        footer &copy; #{new.Date().getFullYear()} Wetube
+extends base.pug
+
+block content
+    h1 Home!
