--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,4 +1,10 @@
-extends base.pug
+extends base
+include mixins/video
 
 block content
-    h1 Home!
+    h2 Welcome here you will see the trending video!
+    ul 
+        each EachVideo in videos
+            +video(EachVideo)
+        else 
+            li Sorry not found.
