--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,7 +1,9 @@
 extends base
 
 block content
-    h4 Change Title of video
+    h4 Update video
     form(method="POST")
         input(name="title", placeholder="Video Title" value=video.title, required)
+        input(name="description" placeholder="Description", value=video.description, type="text", required)
+        input(name="hashtags" placeholder="Hashtags, separated by comma", value=video.hashtags.join() type="text", required)
         input(value="Save",type="submit")
